--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmpContext": "Server=(localdb)\\mssqllocaldb;Database=;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EmpContext": "Server=(localdb)\\mssqllocaldb;Database=empdb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
